--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.10.4  # Updated to match your client version
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.10.4
     environment:
       - discovery.type=single-node
-      - xpack.security.enabled=false  # Disable security for development
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"  # Limit memory usage
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ports:
       - "9200:9200"
     healthcheck:
@@ -13,6 +13,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+    restart: always
 
   app:
     build: .
@@ -23,3 +24,4 @@ services:
     depends_on:
       elasticsearch:
         condition: service_healthy
+    restart: always
