--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+#version: '3.8'
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.10.4
@@ -14,6 +14,8 @@ services:
       timeout: 10s
       retries: 5
     restart: always
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
 
   app:
     build: .
@@ -25,3 +27,6 @@ services:
       elasticsearch:
         condition: service_healthy
     restart: always
+
+volumes:
+  elasticsearch_data:
